--- a/profiles/drupalru/themes/druru/less/drupal/components/_content.less
+++ b/profiles/drupalru/themes/druru/less/drupal/components/_content.less
@@ -5,7 +5,6 @@
 
 .page-header {
   margin-top: 0;
-  word-wrap: break-word;
   border: none;
   line-height: 1em;
   padding-bottom: 0;
@@ -101,7 +100,6 @@ span.cke_toolgroup, a.cke_combo_button {
 }
 
 .region.region-content {
-  word-wrap: break-word;
   margin-bottom: 10px;
   clear: left;
 }
