--- a/profiles/drupalru/themes/druru/less/drupal/components/_sidebars.less
+++ b/profiles/drupalru/themes/druru/less/drupal/components/_sidebars.less
@@ -36,10 +36,6 @@ body {
           .li-select();
         }
 
-        .views-row {
-          word-wrap: break-word;
-        }
-
         .more-link {
           text-align: right;
           margin-top: 6px;
